lambda-appsync-proc/tests/fail/invalid_operation_override.stderr
error: No operation `invalidMutation` in `Mutation`
 --> tests/fail/invalid_operation_override.rs:6:30
  |
6 |     type_override = Mutation.invalidMutation: String,
  |                              ^^^^^^^^^^^^^^^
